bug 330371: add and implement calIPeriod. r=daniel boelzle